force-app/main/default/objects/HRCFSL_Inspec_Template_Step_Translation__c/HRCFSL_Inspec_Template_Step_Translation__c.object-meta.xml
<CustomObject>
    <label>Inspection Template Step Translation</label>
    <nameField>
        <label>Translated Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inspection Template Step Translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>