force-app/main/default/objects/HRCFSL_Inspec_Template_Step_Translation__c/fields/HRCFSL_Inspection_Template_Step__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Inspection_Template_Step__c</fullName>
    <label>Inspection Template Step</label>
    <referenceTo>HRCFSL_Inspection_Template_Step__c</referenceTo>
    <relationshipLabel>Inspection Template Step Translations</relationshipLabel>
    <relationshipName>Inspection_Template_Step_Translations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>