force-app/main/default/objects/HRCFSL_Inspec_Template_Step_Translation__c/fields/HRCFSL_Language2__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Language2__c</fullName>
    <label>Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>