force-app/main/default/objects/HRCFSL_Inspec_Template_Step_Translation__c/fields/HRCFSL_Translated_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Translated_Description__c</fullName>
    <label>Translated Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>