force-app/main/default/objects/HRCFSL_Inspec_Template_Step_Translation__c/fields/HRCFSL_Translated_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Translated_Short_Description__c</fullName>
    <label>Translated Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>